# bitirmeprojesi

./: .coveragerc  .env.example  .gitignore  .kilocodemodes  .mypy_exit.txt  .mypy_out.txt  .pip_out.txt  .pre-commit-config.yaml  .ruff_out.txt  .runtime_run_mypy.cmd  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS_PLAN.md  CODE_OF_CONDUCT.md  COLAB_QUICK_START.md  CONFIGURATION_CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CROP_ROUTER_TECHNICAL_GUIDE.md  DEBUG_VLM_COLAB.py  DEPLOYMENT.md  EK-7_IE4198_Ara_Rapor_Sablonu.docx  FINAL_EXAMINATION_REPORT.md  FLAWS_AND_ISSUES_REPORT.md  IMPORT_ANALYSIS_REPORT.md  IMPORT_DEPENDENCY_ANALYSIS_REPORT.md  ISSUES_VERIFICATION_REPORT.md  LICENSE  MASTER_CODEBASE_CLEANUP_REPORT.md  NOTEBOOK_REFACTORING_SUMMARY.md  PLAN.md  PROJECT_EVALUATION_REPORT.md  PROJECT_STATE.md  README.md  README_CONFIG.md  REPOSITORY_IMPROVEMENTS_SUMMARY.md  ROLLBACK_GUIDE.md  SEAMLESS_AUTOTRAIN_GUIDE.md  SECURITY.md  SESSION_6_COMPLETION_SUMMARY.md  SYNCHRONIZATION_REPORT.md  (+40 more)
.codex/: codex_base_instructions.md  config_example.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
analysis/: code_analysis_report.json  code_analysis_report_expanded.json
api/: database.py  graceful_shutdown.py  main.py  metrics.py  validation.py
archive/: CONSOLIDATION_PLAN.md  REPOSITORY_IMPROVEMENTS_SUMMARY.md
benchmarks/: benchmark_stage2.py
colab_notebooks/: 0_AUTO_TRAIN_COMPLETE_PIPELINE.ipynb  0_grouped_dataset_preparation.ipynb  0_prepare_grouped_dataset_for_training.ipynb  10_ablation_full_image_baseline.ipynb  README.md  (+37 more)
(+4482 files in other folders)
