[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aads-v6"
version = "0.1.0"
description = "Slim continual training and router-driven inference surfaces"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".runtime_tmp/.pytest_cache"
norecursedirs = ["__pycache__", ".runtime_tmp", ".venv"]
addopts = ["--tb=short", "--strict-markers"]
markers = ["integration: integration tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".runtime_tmp", ".venv", "colab_notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["^colab_notebooks/", "^\\.runtime_tmp/", "^tests/"]
